--- a/Task4/VQE.Noisy.Simulator.Code2.ipynb
+++ b/Task4/VQE.Noisy.Simulator.Code2.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Find the groud state of the Hamiltonian:$H=\\begin{pmatrix}\n",
+    "# Find the groud state of the Hamiltonian:$H=\\begin{pmatrix}\n",
     "0 & 0 &0  & 0 \\\\\n",
     "0 & -1 & 1 & 0 \\\\\n",
     "0 & 1 & -1 & 0 \\\\\n",
@@ -31,7 +31,7 @@
    "metadata": {},
    "source": [
     "## #VQE ON A **NOISY** SIMULATOR\n",
-    "[See the noisless case](https://github.com/walid-mk).\n"
+    "[See the noisless case](https://github.com/walid-mk/VQE/blob/master/Task4/VQE.Noiseless.Simulator.Code1.ipynb).\n"
    ]
   },
   {
