--- a/Task4/VQE.Noiseless.Simulator.Code1.ipynb
+++ b/Task4/VQE.Noiseless.Simulator.Code1.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Find the groud state of the Hamiltonian:$H=\\begin{pmatrix}\n",
+    "# Find the groud state of the Hamiltonian:$H=\\begin{pmatrix}\n",
     "0 & 0 &0  & 0 \\\\\n",
     "0 & -1 & 1 & 0 \\\\\n",
     "0 & 1 & -1 & 0 \\\\\n",
@@ -30,7 +30,7 @@
    "metadata": {},
    "source": [
     "## #VQE ON A **IDEAL** SIMULATOR\n",
-    "[See it also in the noisy case](https://github.com/walid-mk)."
+    "[See it also in the noisy case](https://github.com/walid-mk/VQE/blob/master/Task4/VQE.Noisy.Simulator.Code2.ipynb)."
    ]
   },
   {
@@ -553,7 +553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "&#10170; **I searched the lowest energy for the same Hamiltonian, using the VQE in a noisy environment. Moreover, I used another code implementation  and take the same step (use optimizer and for loop) I toke here to get the values.** [See it in my github](https://github.com/walid-mk)"
+    "&#10170; **I searched the lowest energy for the same Hamiltonian, using the VQE in a noisy environment. Moreover, I used another code implementation  and take the same step (use optimizer and for loop) I toke here to get the values.** [See it in my github](https://github.com/walid-mk/VQE/blob/master/Task4/VQE.Noisy.Simulator.Code2.ipynb)"
    ]
   }
  ],
