change the first heading matrix test2

--- a/Task4/VQE.Noiseless.Simulator.Code1.ipynb
+++ b/Task4/VQE.Noiseless.Simulator.Code1.ipynb
@@ -17,8 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Find the groud state of the Hamiltonian:
-    $H=\\begin{pmatrix}\n",
+    "* Find the groud state of the Hamiltonian:$H=\\begin{pmatrix}\n",
     "0 & 0 &0  & 0 \\\\\n",
     "0 & -1 & 1 & 0 \\\\\n",
     "0 & 1 & -1 & 0 \\\\\n",
