change the text equation

--- a/Task4/VQE.Noiseless.Simulator.Code1.ipynb
+++ b/Task4/VQE.Noiseless.Simulator.Code1.ipynb
@@ -305,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* The counts result is returned in qiskit, in a form of a dictionary, e.g. {$\"11\": N_{11} , \"00\": N_{00}\\;$}, so I will define a function ```get_from``` that returns the values in the dictionary. Also, it will be useful for the Hamiltonian dictionary created above."
+    "* The counts result is returned in qiskit, in a form of a dictionary, so I will define a function ```get_from``` that returns the values in the dictionary. Also, it will be useful for the Hamiltonian dictionary created above."
    ]
   },
   {
