figure out that the eigenvector is not necessary

--- a/Task4/VQE.Noiseless.Simulator.Code1.ipynb
+++ b/Task4/VQE.Noiseless.Simulator.Code1.ipynb
@@ -50,32 +50,21 @@
      "output_type": "stream",
      "text": [
       "The eigenvalues of H : [ 0. -2.  0.  0.]\n",
-      "The exact ground state energy is:  -2.0\n",
-      "The exact ground state vector is:  [[0.70710678 0.70710678 0.         0.        ]]\n"
+      "The exact ground state energy is:  -2.0\n"
      ]
     }
    ],
    "source": [
-    "H = np.mat(\"0 0 0 0; 0 -1 1 0; 0, 1 -1 0; 0 0 0 0\") #The Hamiltonian matrix\n",
+    "H = np.mat(\"0 0 0 0; 0 -1 1 0; 0 1 -1 0; 0 0 0 0\") #The Hamiltonian matrix\n",
     "print(\"The eigenvalues of H :\", np.linalg.eigvals(H))\n",
-    "eigenvalue,eigenvector = np.linalg.eig(H) #Solve for eigenvalue and eigenvector\n",
-    "print('The exact ground state energy is: ',eigenvalue[1])\n",
-    "print(\"The exact ground state vector is: \", eigenvector[1])"
+    "print('The exact ground state energy is: ',eigenvalue[1])\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* As we can see the lowest eigenvalue is $-2$ with an eigenvector \n",
-    "$\n",
-    "\\left| \\psi \\right\\rangle = \\begin{pmatrix}\n",
-    "0.70710678 \\\\\n",
-    "0.70710678 \\\\\n",
-    "0 \\\\\n",
-    "0\n",
-    "\\end{pmatrix}.\n",
-    "$"
+    "* As we can see the lowest eigenvalue is $-2$.
    ]
   },
   {
