--- a/Task4/VQE.Noiseless.Simulator.Code1.ipynb
+++ b/Task4/VQE.Noiseless.Simulator.Code1.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* As we can see the lowest eigenvalue is $-2$.
+    "* As we can see the lowest eigenvalue is $-2$."
    ]
   },
   {
