--- a/Task4/VQE.Noiseless.Simulator.Code1.ipynb
+++ b/Task4/VQE.Noiseless.Simulator.Code1.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "H = np.mat(\"0 0 0 0; 0 -1 1 0; 0 1 -1 0; 0 0 0 0\") #The Hamiltonian matrix\n",
     "print(\"The eigenvalues of H :\", np.linalg.eigvals(H))\n",
-    "print('The exact ground state energy is: ',eigenvalue[1])\n"
+    "print('The exact ground state energy is: ', np.linalg.eigvals(H)[1])\n"
    ]
   },
   {
