--- a/Task4/VQE.Noiseless.Simulator.Code1.ipynb
+++ b/Task4/VQE.Noiseless.Simulator.Code1.ipynb
@@ -544,6 +544,14 @@
    "source": [
     "&#10170; **I searched the lowest energy for the same Hamiltonian, using the VQE in a noisy environment. Moreover, I used another code implementation  and take the same step (use optimizer and for loop) I toke here to get the values.** [See it in my github](https://github.com/walid-mk/VQE/blob/master/Task4/VQE.Noisy.Simulator.Code2.ipynb)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://arxiv.org/abs/1304.3061 \n",
+    "https://github.com/DavitKhach/quantum-algorithms-tutorials/blob/master/variational_quantum_eigensolver.ipynb"
+   ]
   }
  ],
  "metadata": {
