--- a/Task4/VQE.Noiseless.Simulator.Code1.ipynb
+++ b/Task4/VQE.Noiseless.Simulator.Code1.ipynb
@@ -644,6 +644,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$Statevector: \\; |\\psi(\\theta)\\rangle = \\begin{bmatrix}\n",
+    "0 \\\\\n",
+    "\\tfrac{1}{\\sqrt{2}}i \\\\\n",
+    "-\\tfrac{1}{\\sqrt{2}}i \\\\\n",
+    "0\n",
+    "\\end{bmatrix}$"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
